# CEWCE-Casper-Enterprise-Workflow-Compliance-Engine

./: .dockerignore  .env.example  .env.railway.example  .eslintrc.json  .gitignore  LICENSE  PROJECT_INDEX.md  README.md  README_QUICK.md  TECHSTACK.md  approver-token.txt  customer-token.txt  docker-compose.sidecar.yml  docker-compose.yml  requester-token.txt
.github/workflows/: ci.yml  sidecar-test.yml
backend/: .dockerignore  .env.deploy.example  .env.example  Dockerfile  apply-migration.sql  check-templates.cjs  deploy-contract.cjs  deploy.ts  docker-entrypoint.sh  docker-seed.cjs  fix-template.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  quick-seed.cjs  railway.json  seed-roles.sql  seed-user1-user2.sql  seed-users.sql  test-db.cjs  test-db.mjs  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts  server.ts
contracts/: Cargo.toml  README.md
contracts/scripts/: deploy.sh
contracts/workflow-contract/: Cargo.toml
contracts/workflow-contract/src/: main.rs
docs/: RAILWAY_ROLE_QUERIES.sql  README.md
docs/api/: README.md
docs/architecture/: README.md
docs/contracts/: README.md
docs/judges/: ARCHITECTURE.md  DELIVERABLE.json  DEMO_SCRIPT.md  WHY_SIDECAR.md
docs/sidecar/: MIGRATION.md  RUNBOOK.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
infrastructure/k8s/: backend.yaml  frontend.yaml  ingress.yaml  (+1 more)
scripts/: setup.sh
(+117 files in other folders)
